# c-in-rust-bare-riscv-qemu

./: Cargo.toml  README.txt  build.rs  link.x  readme.txt
.cargo/: config.toml
some-c-code/: main.c
src/: lib.rs  main.rs  qemu.rs  some_c.rs
